# cpu_usage_fastapi

./: .gitignore  pyproject.toml
cpu_usage/: main.py
