[tool.poetry]
name = "cpu-usage-fastapi"
version = "0.1.0"
description = ""
authors = ["tadeasf <taddy.fort@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
psutil = "^6.0.0"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
